kubernetes/example-yamls/example-deployment.yml
# An example pod configuration file
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: myapp-deployment
  # Labels can be set to any key-value pairs. Useful for filtering.
  labels: 
    app: myapp
    tier: front-end
spec:
  template:
    metadata: 
      # Labels can be set to any key-value pairs. Useful for filtering.
      labels: 
        app: nginx
        type: front-end
    spec:
      containers:
        - name: nginx
          image: nginx
  replicas: 6
  selector: 
    matchLabels:
      type: front-end
