kubernetes/example-yamls/example-pod-with-custom-readiness-probe.yml
# An example pod configuration file
apiVersion: v1
kind: Pod
metadata: 
  name: nginx
  # Labels can be set to any key-value pairs. Useful for filtering.
  labels: 
    app: nginx
    tier: frontend
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 8080
      readinessProbe:
        exec:
          command:
            - cat
            - /app/is_ready
