kubernetes/example-yamls/example-pod-with-persistent-volume-claim.yml
# An example pod configuration file
apiVersion: v1
kind: Pod
metadata: 
  name: nginx
  # Labels can be set to any key-value pairs. Useful for filtering.
  labels: 
    app: nginx
    tier: frontend
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - mountPath: /var/www/html
          name: myvol
  volumes:
    - name: myvol
      persistentVolumeClaim:
        claimName: myClaim
