kubernetes/example-yamls/example-pod-with-secret.yml
# An example pod configuration file
apiVersion: v1
kind: Pod
metadata: 
  name: nginx
  # Labels can be set to any key-value pairs. Useful for filtering.
  labels: 
    app: nginx
    tier: frontend
spec:
  containers:
    # Using the whole secret definition
    - name: nginx
      image: nginx
    - name: nginx
      image: nginx
    - name: nginx
      image: nginx
      volumes:
        - name: example-secret-volume
          secret:
            secretName: examples-secret
