kubernetes/example-yamls/example-pod-with-volume.yml
# An example pod configuration file
apiVersion: v1
kind: Pod
metadata: 
  name: nginx
  # Labels can be set to any key-value pairs. Useful for filtering.
  labels: 
    app: nginx
    tier: frontend
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts: # Where the volume is mounted to on the container
        - mountPath: /opt
          name: data-volume
  volumes: # These are the volume objects themselves that could be mounted
    - name:
      hostPath:
        path: /data
        type: Directory
