kubernetes/example-yamls/example-service-definition copy.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-h
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
  clusterIp: None # This is what makes the service headless
